<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="anthony.example.com.syncadapterlab.MainActivity"
    tools:showIn="@layout/activity_main">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:id="@+id/company_name_text_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/stock_price"
        android:id="@+id/last_stock_price_text_view"
        android:layout_below="@id/company_name_text_view"/>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manually_sync"
            android:id="@+id/btn_manually_sync"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
    </Button>

        <Button
            android:background="@android:color/holo_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_sync_every_min"
            android:id="@+id/btn_auto_sync_every_min"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
    </Button>
        <Button
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/btn_auto_sync_five_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_sync_five_min"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        </Button>


    </LinearLayout>



</RelativeLayout>
